[package]
name = "rexserver"
version = "0.1.0"
edition = "2021"
authors = ["@fromafrica"]
homepage = "https://rex.rs"
repository = "https://github.com/fromafrica/rexserver"
license = "MIT"


[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
http-body-util = "0.1.0-rc.2"
